<resources>
    <string name="app_name">CineWatch2.0</string>
    <string name="movie_recommendation_app">Movie Recommendation App</string>
    <string name="cinewatch">CineWatch</string>
    <string name="camera_picture">Camera Picture</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back!</string>
    <string name="Start_New">Start New</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="saved_movies">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="title_activity_bday_gender_page">BdayGenderPage</string>
    <string name="never_seen">Never Seen</string>
    <string name="info">info</string>
    <string name="search">Search</string>
    <string name="trailer">trailer</string>
    <string name="save">save</string>
    <string name="account">account</string>
    <string name="search_movies">Search Movies</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="firstname_lastname">FIRSTNAME LASTNAME</string>
    <string name="update_movie_subscriptions">UPDATE MOVIE SUBSCRIPTIONS</string>
    <string name="home">Home</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="rating">Rating</string>
    <string name="movie_actors">Movie Actors</string>
    <string name="movie_bio">Movie Bio</string>
    <string name="movie_platforms">Movie Platforms</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="Start_New_here">New User Signup</string>
    <string name="cardstack">cardstack</string>
    <string name="select_your_subscription_options">Select Your Subscriptions</string>
    <string name="crunchyroll">Crunchyroll</string>
    <string name="prime_video">Prime Video</string>
    <string name="paramount">Paramount+</string>
    <string name="peacock">Peacock</string>
    <string name="disney">Disney Plus</string>
    <string name="hbo_max">HBO Max</string>
    <string name="hulu">Hulu</string>
    <string name="netflix">Netflix</string>
    <string name="showtime">Showtime</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="runtime">Runtime</string>
    <string name="release_date">Release Date</string>
    <string name="liked_movies">Liked Movies</string>
    <string name="hello_there">Hello There!</string>
    <string name="account_personalizations">Account Personalizations</string>
    <string name="empty_liked_list">Empty Liked List</string>
    <string name="like">Like</string>

</resources>